test/regtest/goldens/errors/unassigned_expr.ir
Error: Error: Expression returning result must be assigned or used @ Line: 4, Byte: 3, Column: 3

